--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/OscarSoanes/Battleship#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.21.5",
+    "@types/jest": "^29.5.1",
     "css-loader": "^6.7.3",
     "eslint": "^8.39.0",
     "html-webpack-plugin": "^5.5.1",
